Fix mobile horizontal center alignment for scroll indicator

--- a/PersonalWebPage.css
+++ b/PersonalWebPage.css
@@ -553,8 +553,7 @@ img {
     position: absolute;
     bottom: 50px;
     left: 0;
-    right: 0;
-    margin: 0 auto;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
